1. 更改位置授权文案. 2. 新增MJ基模型 3. 新增代祷模型,勇士模型,代祷更新内容模型

--- a/LiveStone/Info.plist
+++ b/LiveStone/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>允许程序运行期间获取您的模糊位置信息</string>
+	<string>方便为你展示附近熟人的代祷事项</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
