--- a/LiveStone/Info.plist
+++ b/LiveStone/Info.plist
@@ -52,7 +52,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3</string>
+	<string>5</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>wechat</string>
@@ -99,6 +99,8 @@
 	<string>您的通讯录将会被上传到服务器加密保存,用于提供代祷服务.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>方便为你展示附近熟人的代祷事项</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要访问您的相册,请放心我们只读取您选中的图片</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
